# freedv

./: CMakeLists.txt  ChangeLog  FDMDV2.fbp  Makefile  Makefile.am  Makefile.in  README.Win32  README.cmake  README.linux  README.osx  README.txt  aclocal.m4  audiostream.cpp  config.status  configure  configure.ac  credits.txt  dlg_about.h  dlg_audio.cpp  dlg_audio.h  dlg_comports.h  dlg_options.cpp  dlg_options.h  fdmdv2.mk  fdmdv2.project  fdmdv2.txt  fdmdv2.workspace  fdmdv2.workspace.ofastaff  fdmdv2_main.cpp  fdmdv2_main.h  fdmdv2_plot.cpp  fdmdv2_plot.h  fdmdv2_thread_audio.cpp  fdmdv2_thread_audio.h  fdmdv2_wsp.mk  paclass.cpp  paclass.h  thread_audio.cpp  thread_audio.h  topFrame.cpp  (+6 more)
cmake/: BuildCodec2.cmake  BuildLibctb.cmake  BuildPortaudio.cmake  BuildSamplerate.cmake  BuildSndfile.cmake  BuildSox.cmake  BuildWxWidgets.cmake  config.h.in
contrib/: freedv.desktop
notes/: portaudio_notes.txt
portaudio/: Makefile  config.status  libtool  portaudio-2.0.pc  portaudio.mk  portaudio.project
portaudio/examples/test_portaudio/: main.cpp  test_portaudio.mk  test_portaudio.project  test_portaudio.txt
portaudio/portaudio_examples/: MyPortaudioClass.cpp  MyPortaudioClass.h
src/: CMakeLists.txt  FDMDV2.fbp  Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.linux.dmw  Makefile.win32  Makefile.win32.dmw  audiostream.h  credits.txt  dlg_about.cpp  dlg_about.h  dlg_audio.cpp  dlg_audio.h  dlg_audiooptions.cpp  dlg_audiooptions.h  dlg_comports.cpp  dlg_comports.h  dlg_filter.cpp  dlg_filter.h  dlg_options.cpp  dlg_options.h  dlg_ptt.cpp  dlg_ptt.h  fdmdv2DlgAudio.cpp  fdmdv2DlgAudio.h  fdmdv2TopFrame.cpp  fdmdv2TopFrame.h  fdmdv2_defines.h  fdmdv2_hdw_ports.cpp  fdmdv2_hdw_ports.h  fdmdv2_main.cpp  fdmdv2_main.h  fdmdv2_pa_wrapper.cpp  fdmdv2_pa_wrapper.h  fdmdv2_plot.cpp  fdmdv2_plot.h  fdmdv2_plot_scalar.cpp  fdmdv2_plot_scalar.h  (+25 more)
src/res/: logo.gfie  logo.icl  logo_24x24x256.xpm
